sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:10: error: not found: value i
		if (plusPetit(i+1,i)) {echange(i+1,i)
                              ^AlgCocktailSort2:10: error: not found: value i
		if (plusPetit(i+1,i)) {echange(i+1,i)
                                               ^AlgCocktailSort2:13: error: not found: value i
		i=i+1
                ^AlgCocktailSort2:17: error: not found: value i
		if (plusPetit(i,i-1)) {
                              ^AlgCocktailSort2:18: error: not found: value i
			echange(i,i-1)
                                ^AlgCocktailSort2:21: error: not found: value i
	i=i-1	
        ^